--- a/core/templates/contact.html
+++ b/core/templates/contact.html
@@ -5,18 +5,20 @@
 {% endblock %}
 {% block content %}
     <div class="text-white mt-4 md:mt-16 md:w-4/5">
-        <h1 class="font-montserrat text-2xl font-bold mb-4">Contact Me</h1>
+        <h1 class="font-montserrat text-3xl font-bold mb-4 text-sky-500">📧 Contact</h1>
         <p class="mb-10 font-opensans">
             I typically respond within 24 hours. Please use this form for professional inquiries only. Promotions and spam will not be entertained.
         </p>
-        <h3 class="font-inter text-xl font-bold mb-4 flex justify-start items-center gap-2">Let's connect!</h3>
+        <!-- Connect Section -->
+        <h3 class="font-inter text-xl font-bold mb-4 flex justify-start items-center gap-2">🤝 Let's connect!</h3>
         <p class="mb-4">
             Feel free to reach out to me at <b class="font-montserrat text-violet-500">hi@techrahis.com</b>, or find me on social media:
         </p>
         <ul class="flex flex-wrap space-x-4 mb-10">
             {% include "components/social_icon.html" %}
         </ul>
-        <h3 class="font-inter text-xl font-bold mb-4 flex justify-start items-center gap-2">Send me a message</h3>
+        <!-- Message Form Section -->
+        <h3 class="font-inter text-xl font-bold mb-4 flex justify-start items-center gap-2">💬 Send me a message</h3>
         {% if success_message %}
             <div class="bg-green-100 border border-emerald-400 md:w-4/5 text-emerald-700 px-4 py-3 rounded mb-6 flex items-center gap-2">
                 <i class="fa-solid fa-circle-check text-xl"></i>
@@ -30,7 +32,7 @@
             {% csrf_token %}
             <!-- Full Name Field -->
             <div class="mb-4">
-                <label for="name" class="block text-md font-medium text-gray-100 font-inter">Full name</label>
+                <label for="name" class="block text-md font-medium text-gray-100 font-inter">👤 Full name</label>
                 <input type="text"
                        id="name"
                        name="name"
@@ -49,7 +51,7 @@
             <!-- Email Field -->
             <div class="mb-4">
                 <label for="email"
-                       class="block text-md font-medium text-gray-100 font-inter">Email</label>
+                       class="block text-md font-medium text-gray-100 font-inter">📧 Email</label>
                 <input type="email"
                        id="email"
                        name="email"
@@ -68,7 +70,7 @@
             <!-- Subject Field -->
             <div class="mb-4">
                 <label for="subject"
-                       class="block text-md font-medium text-gray-100 font-inter">Subject</label>
+                       class="block text-md font-medium text-gray-100 font-inter">📌 Subject</label>
                 <input type="text"
                        id="subject"
                        name="subject"
@@ -87,7 +89,7 @@
             <!-- Message Field -->
             <div class="mb-12">
                 <label for="message"
-                       class="block text-md font-medium text-gray-100 font-inter">Message</label>
+                       class="block text-md font-medium text-gray-100 font-inter">✉️ Message</label>
                 <textarea id="message"
                           name="message"
                           class="rounded-md form-input px-2 py-1 mt-2 block w-full bg-transparent h-20 text-gray-300 focus:border-violet-600 focus:border-opacity-50 border border-gray-100 border-opacity-50 focus:outline-none overflow-hidden scrollbar-hidden">{% if form.message.value %}{{ form.message.value }}{% endif %}</textarea>
@@ -107,12 +109,12 @@
             <div class="mb-12">
                 <button type="submit"
                         class="rounded-md font-montserrat font-bold bg-violet-600 text-white py-2 px-4 w-full hover:bg-purple-600 duration-1000 transition-transform">
-                    Send Your Message <i class="fa-solid fa-paper-plane"></i>
+                    ✈️ Send Your Message
                 </button>
             </div>
             <!-- Privacy Note -->
             <p class="text-gray-400 text-xs mt-2">
-                Your information will only be used to respond to your inquiry. We value your privacy and will not share your details with any third parties.
+                🔒 Your information will only be used to respond to your inquiry. We value your privacy and will not share your details with any third parties.
             </p>
         </form>
     </div>
