--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -10,7 +10,7 @@
             <a href="{% url 'terms_of_service' %}">Terms of Service</a>
         </li>
         <li>
-            <a href="{% url 'colophon' %}">FAQs</a>
+            <a href="{% url 'faq' %}">FAQs</a>
         </li>
     </ul>
     <p class="text-center">
