--- a/templates/components/header_list.html
+++ b/templates/components/header_list.html
@@ -8,8 +8,8 @@
     <li id="projects-tab">
         <a href="{% url 'portfolios' %}">Portfolios</a>
     </li>
-    <li id="contact-tab">
-        <a href="{% url 'contact' %}">Services</a>
+    <li id="services-tab">
+        <a href="{% url 'services' %}">Services</a>
     </li>
 </ul>
 <script>
