--- a/core/templates/about.html
+++ b/core/templates/about.html
@@ -2,94 +2,124 @@
 {% load static %}
 {% block title %}About{% endblock %}
 {% block meta_description %}
-    Hey there! I'm Rajarshi Samaddar, a full-stack software engineer from India with over 8 months of professional experience. My pronouns are he/they.
+    Learn more about Rajarshi Samaddar, a full-stack software engineer from India with expertise in web development and 8+ months of professional experience.
 {% endblock %}
 {% block content %}
     <div class="text-white mt-4 md:mt-16">
-        <h1 class="font-montserrat text-2xl font-bold mb-4">About</h1>
-        <p class="mb-4 font-opensans">
-            Hey there! I'm Rajarshi Samaddar, a full-stack software engineer from India with over 8 months of professional experience. My pronouns are he/they.
-        </p>
-        <p class="mb-4 font-opensans">
-            I focus on details and I'm passionate about crafting software products that look great and are both accessible and easy to maintain.
-        </p>
-        <img class="w-full max-h-[60vh] object-cover mb-4 rounded-lg"
-             src="{% static 'image/about-me.png' %}"
-             alt="My Image" />
-        <p class="mb-4 font-opensans">
-            I'm a huge advocate for open source and collaborating with the community. You can find my stash of websites, libraries, and apps on GitHub which have earned over 2K stars.
-        </p>
-        <p class="mb-4 font-opensans">
-            I'm all about diving into challenges improving and expanding my skillset and I thrive in globally-remote teams that value people and embrace trust, kindness, and inclusion.
-        </p>
-        <p class="mb-10 font-opensans">
-            If you're curious about the hardware and software tools I use every day, feel free to check out the utilities page.
-        </p>
-        <h3 class="font-inter text-xl font-bold mb-4 flex justify-start items-center gap-2">Let's connect!</h3>
-        <p class="mb-4 font-opensans">
-            Feel free to reach out to me at <b class="font-montserrat text-violet-500">me@techrahis.com</b>, or find me on social media:
-        </p>
-        <ul class="flex flex-wrap space-x-4 mb-10">
-            {% include "components/social_icon.html" %}
+        <h1 class="font-montserrat text-3xl font-bold mb-4 text-teal-400">🧑‍🦱 About</h1>
+        <div class="flex flex-col lg:flex-row lg:space-x-6">
+            <div class="lg:w-1/2 mb-6 lg:mb-0">
+                <p class="mb-4 font-opensans">
+                    Hey! I'm <b class="text-violet-500">Rajarshi Samaddar</b>, a full-stack software engineer from India with over 8 months of experience in web development. My pronouns are <b>he/they</b>. I’m passionate about building visually appealing, accessible, and scalable software solutions.
+                </p>
+                <p class="mb-4 font-opensans">
+                    I thrive on challenges and enjoy learning new technologies. Whether it’s developing applications, optimizing performance, or enhancing user experiences, I’m committed to delivering high-quality work.
+                </p>
+                <p class="mb-4 font-opensans">
+                    Outside of coding, I contribute to open-source projects and engage with the tech community. My GitHub repositories have garnered over 2K stars, reflecting my dedication to collaboration and growth.
+                </p>
+                <p class="mb-4 font-opensans">
+                    I excel in remote teams that value collaboration, trust, and inclusion. Let’s connect and create something amazing together!
+                </p>
+            </div>
+            <div class="lg:w-1/2 flex justify-center items-center">
+                <img class="rounded-lg max-h-[60vh] object-cover"
+                     src="{% static 'image/me.png' %}"
+                     alt="Rajarshi Samaddar" />
+            </div>
+        </div>
+        <h3 class="font-inter text-2xl font-bold mt-10 mb-4">Skills & Technologies</h3>
+        <ul class="list-inside font-opensans">
+            <li>
+                <i class="fas fa-laptop-code text-pink-500"></i> <b>Front-End:</b> Next.js, React, Redux, Tailwind CSS, Material UI
+            </li>
+            <li>
+                <i class="fas fa-server text-purple-500"></i> <b>Back-End:</b> Node.js, Express, Django, Prisma, PostgreSQL, MongoDB
+            </li>
+            <li>
+                <i class="fas fa-cloud text-teal-500"></i> <b>DevOps & Cloud:</b> AWS, Docker, GitHub Actions
+            </li>
+            <li>
+                <i class="fas fa-comments text-green-500"></i> <b>Soft Skills:</b> Problem-solving, Communication, Leadership
+            </li>
+            <li>
+                <i class="fas fa-language text-blue-500"></i> <b>Languages:</b> English, Hindi, Bengali
+            </li>
         </ul>
-        <h3 class="font-montserrat text-xl font-bold mb-4 flex justify-start items-center gap-2">Skills</h3>
-        <table class="table-auto w-full text-left">
-            <tbody>
-                <tr>
-                    <td class="border px-4 py-2">Front-End Technologies</td>
-                    <td class="border px-4 py-2">Next.js, React, Redux, Tailwind CSS, Material UI, Bootstrap</td>
-                </tr>
-                <tr>
-                    <td class="border px-4 py-2">Back-End Development</td>
-                    <td class="border px-4 py-2">Node.js, Express, Django, Prisma, Sequelize, PostgreSQL, MongoDB, AWS</td>
-                </tr>
-                <tr>
-                    <td class="border px-4 py-2">Soft Skills</td>
-                    <td class="border px-4 py-2">Problem-solving, Teamwork, Communication, Attention to Detail, Leadership</td>
-                </tr>
-                <tr>
-                    <td class="border px-4 py-2">Languages</td>
-                    <td class="border px-4 py-2">English (Intermediate), Hindi (Fluent), Bengali (Native)</td>
-                </tr>
-            </tbody>
-        </table>
-        <h3 class="font-montserrat text-xl font-bold mb-4 flex justify-start items-center mt-10 gap-2">Experience</h3>
+        <h3 class="font-inter text-2xl font-bold mt-10 mb-4">Experience</h3>
         <div class="experience-section">
-            <div class="experience-item mb-6">
-                <h4 class="text-lg font-semibold">Jr. Web Developer</h4>
-                <p class="text-sm text-gray-300">July 2024 - Present</p>
-                <p class="text-sm text-gray-300">Grey Mirror Private Limited, Kolkata, Full time</p>
-                <ul class="list-disc list-inside mt-2">
+            <div class="experience-item mb-6 bg-slate-900 p-4 rounded-md">
+                <h4 class="text-xl font-semibold text-pink-500">
+                    <i class="fas fa-user-tie"></i> Developer @ TechRahis.com
+                </h4>
+                <p class="text-sm text-gray-300">September 2024 - Present | Full Time</p>
+                <ul class="list-inside mt-2 font-opensans text-gray-200">
                     <li>
-                        Enhanced system performance and stability by optimizing Redis cache utilization, leading to a 15% increase in application responsiveness.
+                        <i class="fa-regular fa-circle-dot text-green-500"></i> Developed techrahis.com in just 5 days.
                     </li>
-                    <li>Deployed and managed Aerospike database for real-time data processing, improving data retrieval speed by 25%.</li>
-                </ul>
-            </div>
-            <div class="experience-item mb-6">
-                <h4 class="text-lg font-semibold">Full-Stack MERN Developer</h4>
-                <p class="text-sm text-gray-300">April 2024 - July 2024</p>
-                <p class="text-sm text-gray-300">Hnaya Educational Services Private Limited, Remote, Freelance</p>
-                <ul class="list-disc list-inside mt-2">
                     <li>
-                        Boosted site speed for BharatLinkr.com by 300% through expert utilization of Next.js, React, and AWS technologies.
+                        <i class="fa-regular fa-circle-dot text-green-500"></i> Integrated MySQL with Redis for lightning-fast dynamic page loading.
                     </li>
-                    <li>Slashed AWS operational costs from $350 to $170 within a tight 24-day timeframe.</li>
                     <li>
-                        Engineered 23 APIs using Node.js, Express, and PostgreSQL while leading and mentoring a 4-member team, contributing to the recruitment of 3 additional talents.
+                        <i class="fa-regular fa-circle-dot text-green-500"></i> Created a comprehensive admin page for content management.
+                    </li>
+                    <li>
+                        <i class="fa-regular fa-circle-dot text-green-500"></i> Deployed the site on Heroku using Docker containers.
                     </li>
                 </ul>
             </div>
-            <div class="experience-item mb-6">
-                <h4 class="text-lg font-semibold">React Developer</h4>
-                <p class="text-sm text-gray-300">May 2023 - August 2023</p>
-                <p class="text-sm text-gray-300">Celebal Technologies Private Limited, Remote, Intern</p>
-                <ul class="list-disc list-inside mt-2">
+            <div class="experience-item mb-6 bg-slate-900 p-4 rounded-md">
+                <h4 class="text-xl font-semibold text-purple-500">
+                    <i class="fas fa-user-graduate"></i> Jr. Web Developer @ Grey Mirror Pvt. Ltd.
+                </h4>
+                <p class="text-sm text-gray-300">July 2024 - Present | Work From Home</p>
+                <ul class="list-inside mt-2 font-opensans text-gray-200">
                     <li>
-                        Ranked top among 400+ interns in the training program, developing SkyCast, a weather app with user registration, location-based weather, and customizable themes.
+                        <i class="fa-regular fa-circle-dot text-green-500"></i> Boosted application responsiveness by 15% through optimized Redis cache usage.
+                    </li>
+                    <li>
+                        <i class="fa-regular fa-circle-dot text-green-500"></i> Implemented Aerospike database, enhancing data retrieval speed by 25%.
+                    </li>
+                </ul>
+            </div>
+            <div class="experience-item mb-6 bg-slate-900 p-4 rounded-md">
+                <h4 class="text-xl font-semibold text-teal-500">
+                    <i class="fas fa-code-branch"></i> Full-Stack MERN Developer @ Hnaya Educational Services
+                </h4>
+                <p class="text-sm text-gray-300">April 2024 - July 2024 | Freelance</p>
+                <ul class="list-inside mt-2 font-opensans text-gray-200">
+                    <li>
+                        <i class="fa-regular fa-circle-dot text-green-500"></i> Increased BharatLinkr.com's speed by 300% using Next.js and AWS.
+                    </li>
+                    <li>
+                        <i class="fa-regular fa-circle-dot text-green-500"></i> Reduced AWS operational costs by over 50%, from $350 to $170, in one month.
+                    </li>
+                    <li>
+                        <i class="fa-regular fa-circle-dot text-green-500"></i> Led a 4-member team in developing 23 RESTful APIs with Node.js and PostgreSQL.
+                    </li>
+                </ul>
+            </div>
+            <div class="experience-item mb-6 bg-slate-900 p-4 rounded-md">
+                <h4 class="text-xl font-semibold text-green-500">
+                    <i class="fas fa-code"></i> React Developer @ Celebal Technologies
+                </h4>
+                <p class="text-sm text-gray-300">May 2023 - August 2023 | Intern</p>
+                <ul class="list-inside mt-2 font-opensans text-gray-200">
+                    <li>
+                        <i class="fa-regular fa-circle-dot text-green-500"></i> Developed SkyCast, a feature-rich weather app with location-based forecasting and customizable themes.
+                    </li>
+                    <li>
+                        <i class="fa-regular fa-circle-dot text-green-500"></i> Ranked top among 400+ interns during the training program.
                     </li>
                 </ul>
             </div>
         </div>
+        <h3 class="font-inter text-2xl font-bold mt-10 mb-4">Get In Touch</h3>
+        <p class="font-opensans mb-4">
+            Interested in collaborating? Reach out to me at <b class="text-violet-500">raj@techrahis.com</b>, or connect with me on social media:
+        </p>
+        <ul class="flex flex-wrap space-x-4 mb-10">
+            {% include "components/social_icon.html" %}
+        </ul>
     </div>
 {% endblock %}
