--- a/portfolios/templates/portfolio.html
+++ b/portfolios/templates/portfolio.html
@@ -5,34 +5,34 @@
 {% endblock %}
 {% block content %}
     <div class="text-white mt-4 md:mt-16">
-        <h1 class="font-montserrat text-2xl font-bold mb-4">Portfolios</h1>
-        <p class="mb-4">
+        <h1 class="font-montserrat text-3xl font-bold mb-4 text-pink-500">🌟 Portfolios</h1>
+        <p class="mb-4 text-gray-300">
             I've been working on a variety of projects over the years. Here are some of the projects I've worked on. Click on a project to learn more about it.
         </p>
         <div class="flex flex-wrap mb-10">
             <a href="{% url 'portfolios' %}"
-               class="text-gray-50 text-xs font-bold font-inter py-1 px-2 border-2 rounded-full mr-2 mb-2 {% if not request.GET.category %}bg-purple-600{% endif %}">All</a>
+               class="text-gray-50 text-xs font-bold font-inter py-1 px-2 border-2 rounded-full mr-2 mb-2 {% if not request.GET.category %}bg-purple-600{% endif %}">🌐 All</a>
             <a href="{% url 'portfolios' %}?category=development"
-               class="text-gray-50 text-xs font-bold font-inter py-1 px-2 border-2 rounded-full mr-2 mb-2 {% if request.GET.category == 'development' %}bg-purple-600{% endif %}">Development</a>
+               class="text-gray-50 text-xs font-bold font-inter py-1 px-2 border-2 rounded-full mr-2 mb-2 {% if request.GET.category == 'development' %}bg-purple-600{% endif %}">💻 Development</a>
             <a href="{% url 'portfolios' %}?category=design"
-               class="text-gray-50 text-xs font-bold font-inter py-1 px-2 border-2 rounded-full mr-2 mb-2 {% if request.GET.category == 'design' %}bg-purple-600{% endif %}">Design</a>
+               class="text-gray-50 text-xs font-bold font-inter py-1 px-2 border-2 rounded-full mr-2 mb-2 {% if request.GET.category == 'design' %}bg-purple-600{% endif %}">🎨 Design</a>
             <a href="{% url 'portfolios' %}?category=seo"
-               class="text-gray-50 text-xs font-bold font-inter py-1 px-2 border-2 rounded-full mr-2 mb-2 {% if request.GET.category == 'seo' %}bg-purple-600{% endif %}">SEO</a>
+               class="text-gray-50 text-xs font-bold font-inter py-1 px-2 border-2 rounded-full mr-2 mb-2 {% if request.GET.category == 'seo' %}bg-purple-600{% endif %}">🔍 SEO</a>
             <a href="{% url 'portfolios' %}?category=app"
-               class="text-gray-50 text-xs font-bold font-inter py-1 px-2 border-2 rounded-full mr-2 mb-2 {% if request.GET.category == 'app' %}bg-purple-600{% endif %}">Mobile App</a>
+               class="text-gray-50 text-xs font-bold font-inter py-1 px-2 border-2 rounded-full mr-2 mb-2 {% if request.GET.category == 'app' %}bg-purple-600{% endif %}">📱 Mobile App</a>
         </div>
     </div>
     <div class="space-y-8 text-white mb-10">
         {% if portfolios %}
             {% for portfolio in portfolios %}
                 <a href="{% url 'portfolio_detail' portfolio.slug %}">
-                    <div class="portfolio-item flex flex-col bg-slate-900 rounded-md md:flex-row items-center mb-8 border border-violet-600 border-opacity-50 hover:bg-purple-600">
+                    <div class="portfolio-item flex flex-col bg-slate-900 rounded-md md:flex-row items-center mb-8 border border-violet-600 border-opacity-50 hover:bg-purple-600 transition-transform transform hover:scale-105">
                         <img src="{{ portfolio.thumbnail.url|default_if_none:'path/to/default-image.jpg' }}"
                              alt="{{ portfolio.title }}"
                              class="w-full md:w-1/4 h-56 rounded-tl-md rounded-tr-md rounded-bl-none md:rounded-tr-none md:rounded-bl-md object-cover mb-4 md:mb-0">
                         <div class="mt-4 md:mt-6 mb-2 mx-2 md:ml-6">
-                            <h3 class="text-2xl font-montserrat font-semibold mb-4 flex justify-between mr-2 items-center">
-                                {{ portfolio.title }}<i class="fa-solid fa-arrow-right"></i>
+                            <h3 class="text-2xl font-montserrat font-semibold mb-4 flex justify-between mr-2 items-center portfolio-title">
+                                {{ portfolio.title }} <i class="fa-solid fa-arrow-right"></i>
                             </h3>
                             <p class="text-lg font-bold text-gray-200 mb-2">{{ portfolio.date|date:"F d, Y" }}</p>
                             <p class="text-gray-200 mb-6">{{ portfolio.short_description|truncatechars:135 }}</p>
@@ -46,7 +46,17 @@
                 </a>
             {% endfor %}
         {% else %}
-            <p class="text-gray-200">No portfolios available at the moment. Please check back later.</p>
+            <p class="text-gray-200">❌ No portfolios available at the moment. Please check back later.</p>
         {% endif %}
     </div>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const titles = document.querySelectorAll('.portfolio-title');
+            const colors = ['rgb(217 70 239)', 'rgb(236 72 153)', 'rgb(168 85 247)', 'rgb(99 102 241)', 'rgb(52 211 153)', 'rgb(245 158 11)'];
+            titles.forEach((item) => {
+                const randomColor = colors[Math.floor(Math.random() * colors.length)];
+                item.style.color = randomColor;
+            });
+        });
+    </script>
 {% endblock %}
