--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1117,6 +1117,10 @@ video {
   margin-bottom: 3rem;
 }
 
+.mb-14{
+  margin-bottom: 3.5rem;
+}
+
 .mb-16{
   margin-bottom: 4rem;
 }
@@ -1151,6 +1155,10 @@ video {
 
 .mt-12{
   margin-top: 3rem;
+}
+
+.mt-14{
+  margin-top: 3.5rem;
 }
 
 .mt-16{
@@ -1225,16 +1233,16 @@ video {
   height: 6vh;
 }
 
+.h-\[84vh\]{
+  height: 84vh;
+}
+
 .h-auto{
   height: auto;
 }
 
 .h-full{
   height: 100%;
-}
-
-.h-screen{
-  height: 100vh;
 }
 
 .max-h-\[60vh\]{
@@ -1432,6 +1440,15 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded-xl{
+  border-radius: 0.75rem;
+}
+
+.rounded-t-xl{
+  border-top-left-radius: 0.75rem;
+  border-top-right-radius: 0.75rem;
+}
+
 .rounded-bl-none{
   border-bottom-left-radius: 0px;
 }
@@ -1452,6 +1469,14 @@ video {
   border-width: 2px;
 }
 
+.border-l-2{
+  border-left-width: 2px;
+}
+
+.border-r-2{
+  border-right-width: 2px;
+}
+
 .border-t{
   border-top-width: 1px;
 }
@@ -1463,11 +1488,6 @@ video {
 .border-emerald-400{
   --tw-border-opacity: 1;
   border-color: rgb(52 211 153 / var(--tw-border-opacity));
-}
-
-.border-fuchsia-500{
-  --tw-border-opacity: 1;
-  border-color: rgb(217 70 239 / var(--tw-border-opacity));
 }
 
 .border-gray-100{
@@ -1488,11 +1508,6 @@ video {
 .border-purple-600{
   --tw-border-opacity: 1;
   border-color: rgb(147 51 234 / var(--tw-border-opacity));
-}
-
-.border-rose-500{
-  --tw-border-opacity: 1;
-  border-color: rgb(244 63 94 / var(--tw-border-opacity));
 }
 
 .border-violet-600{
@@ -1527,6 +1542,11 @@ video {
 .bg-green-100{
   --tw-bg-opacity: 1;
   background-color: rgb(220 252 231 / var(--tw-bg-opacity));
+}
+
+.bg-orange-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
 }
 
 .bg-pink-600{
@@ -1573,6 +1593,10 @@ video {
   background-color: rgb(124 58 237 / var(--tw-bg-opacity));
 }
 
+.bg-opacity-50{
+  --tw-bg-opacity: 0.5;
+}
+
 .bg-opacity-70{
   --tw-bg-opacity: 0.7;
 }
@@ -1598,6 +1622,10 @@ video {
   padding: 2.5rem;
 }
 
+.p-2{
+  padding: 0.5rem;
+}
+
 .p-4{
   padding: 1rem;
 }
@@ -1620,14 +1648,19 @@ video {
   padding-right: 1rem;
 }
 
-.px-8{
-  padding-left: 2rem;
-  padding-right: 2rem;
+.px-6{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .py-1{
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+}
+
+.py-10{
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }
 
 .py-16{
@@ -1656,6 +1689,10 @@ video {
 
 .pt-20{
   padding-top: 5rem;
+}
+
+.pt-4{
+  padding-top: 1rem;
 }
 
 .text-center{
@@ -1731,6 +1768,10 @@ video {
 
 .font-semibold{
   font-weight: 600;
+}
+
+.italic{
+  font-style: italic;
 }
 
 .text-amber-400{
@@ -1871,6 +1912,12 @@ video {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.backdrop-blur-md{
+  --tw-backdrop-blur: blur(12px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
 .transition-colors{
@@ -2200,10 +2247,69 @@ option:hover {
   }
 }
 
+.booking_btn {
+  --purple: #7c3aed;
+  font-size: 15px;
+  padding: 0.7em 2.7em;
+  letter-spacing: 0.06em;
+  position: relative;
+  font-family: inherit;
+  border-radius: 0.6em;
+  overflow: hidden;
+  transition: all 2s;
+  line-height: 1.4em;
+  border: 2px solid var(--purple);
+  background: linear-gradient(
+    to right,
+    rgba(124, 58, 237, 0.1) 1%,
+    transparent 40%,
+    transparent 60%,
+    rgba(124, 58, 237, 0.1) 100%
+  );
+  color: var(--purple);
+  width: 100%;
+  box-shadow:
+    inset 0 0 10px rgba(124, 58, 237, 0.4),
+    0 0 9px 3px rgba(124, 58, 237, 0.1);
+}
+
+.booking_btn:hover {
+  color: #b794f4;
+  box-shadow:
+    inset 0 0 10px rgba(124, 58, 237, 0.6),
+    0 0 9px 3px rgba(124, 58, 237, 0.2);
+}
+
+.booking_btn:before {
+  content: "";
+  position: absolute;
+  left: -150%;
+  width: 300%;
+  height: 100%;
+  top: 0;
+  transition: transform 0.4s ease-in-out;
+  background: linear-gradient(
+    to right,
+    transparent 1%,
+    rgba(124, 58, 237, 0.1) 40%,
+    rgba(124, 58, 237, 0.1) 60%,
+    transparent 100%
+  );
+}
+
+.booking_btn:hover:before {
+  transform: translateX(150%);
+}
+
 .hover\:scale-105:hover{
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:bg-orange-600:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 88 12 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-purple-600:hover{
@@ -2339,6 +2445,10 @@ option:hover {
 
   .md\:w-4\/5{
     width: 80%;
+  }
+
+  .md\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:grid-cols-3{
