--- a/static/css/input.css
+++ b/static/css/input.css
@@ -253,3 +253,57 @@ option:hover {
       0 0 0 80px rgba(255, 255, 255, 0);
   }
 }
+
+.booking_btn {
+  --purple: #7c3aed;
+  font-size: 15px;
+  padding: 0.7em 2.7em;
+  letter-spacing: 0.06em;
+  position: relative;
+  font-family: inherit;
+  border-radius: 0.6em;
+  overflow: hidden;
+  transition: all 2s;
+  line-height: 1.4em;
+  border: 2px solid var(--purple);
+  background: linear-gradient(
+    to right,
+    rgba(124, 58, 237, 0.1) 1%,
+    transparent 40%,
+    transparent 60%,
+    rgba(124, 58, 237, 0.1) 100%
+  );
+  color: var(--purple);
+  width: 100%;
+  box-shadow:
+    inset 0 0 10px rgba(124, 58, 237, 0.4),
+    0 0 9px 3px rgba(124, 58, 237, 0.1);
+}
+
+.booking_btn:hover {
+  color: #b794f4;
+  box-shadow:
+    inset 0 0 10px rgba(124, 58, 237, 0.6),
+    0 0 9px 3px rgba(124, 58, 237, 0.2);
+}
+
+.booking_btn:before {
+  content: "";
+  position: absolute;
+  left: -150%;
+  width: 300%;
+  height: 100%;
+  top: 0;
+  transition: transform 0.4s ease-in-out;
+  background: linear-gradient(
+    to right,
+    transparent 1%,
+    rgba(124, 58, 237, 0.1) 40%,
+    rgba(124, 58, 237, 0.1) 60%,
+    transparent 100%
+  );
+}
+
+.booking_btn:hover:before {
+  transform: translateX(150%);
+}
