--- a/templates/_base.html
+++ b/templates/_base.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
       {% block title %}{% endblock %}
-    - TechRahis</title>
+      - TechRahis
+    </title>
     <meta name="description"
           content="{% block meta_description %}TechRahis.com is a personal website of Rajarshi Samaddar.{% endblock %}" />
     <link rel="shortcut icon"
@@ -24,8 +25,38 @@
           referrerpolicy="no-referrer" />
     <link rel="icon" href="{% static 'images/favicon.ico' %}" />
     {% block extra_head %}{% endblock %}
+    <style>
+        /* Loader styles */
+        #loader {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: rgba(255, 255, 255, 0.8); /* Optional: add a background color */
+            z-index: 1000; /* Ensure it appears above other content */
+        }
+        .loader {
+            border: 16px solid #f3f3f3; /* Light grey */
+            border-top: 16px solid #3498db; /* Blue */
+            border-radius: 50%;
+            width: 60px;
+            height: 60px;
+            animation: spin 2s linear infinite;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+    </style>
   </head>
-  <body class="bg-gray-950">
+  <body class="bg-gray-950" onload="hideLoader()">
+    <div id="loader" style="display: flex;">
+      <div class="loader"></div>
+    </div>
     {% include "components/navbar.html" %}
     <div class="mx-auto max-w-4xl flex flex-col min-h-[90vh]">
       <main class="flex-grow mt-[10vh] px-4 sm:px-0 font-opensans">
@@ -33,6 +64,16 @@
       </main>
     </div>
     {% include "components/footer.html" %}
+    <script>
+        function hideLoader() {
+            document.getElementById('loader').style.display = 'none';
+        }
+
+        // Show the loader on page unload (before navigating away)
+        window.addEventListener('beforeunload', function() {
+            document.getElementById('loader').style.display = 'flex';
+        });
+    </script>
+    {% block extra_body %}{% endblock %}
   </body>
-  {% block extra_body %}{% endblock %}
 </html>
